# bp

./: .gitignore  HACKING.md  LICENSE  LOCKSTEP.md  README.md  TODO.md  checks.sh  current_dirs.txt  distfiles  g
.github/ISSUE_TEMPLATE/: bug_report.md  package_request.md
.github/workflows/: ci.yml
app-admin/ansible/: Manifest  ansible-2.10.9999.ebuild  ansible-2.8.4.ebuild  ansible-2.9.9999.ebuild
app-admin/chrpath/: Manifest  chrpath-0.16.ebuild
app-admin/eselect/: Manifest  eselect-1.4.16.ebuild
app-admin/logrotate/: Manifest  logrotate-20210726.ebuild  logrotate-9999.ebuild
app-admin/perl-cleaner/: perl-cleaner-2.27.ebuild
app-admin/sshguard/: sshguard-9999.ebuild
app-admin/sudo/: Manifest  sudo-1.8.31.ebuild  sudo-1.9.1.ebuild  sudo-1.9.2.ebuild  sudo-1.9.4.ebuild  sudo-1.9.7.ebuild  sudo-20210727.ebuild
app-admin/sysstat/: Manifest  sysstat-12.2.0.ebuild  sysstat-12.3.3.ebuild  sysstat-20210717.ebuild  sysstat-9999.ebuild
app-admin/ulogd/: ulogd-2.0.7-r1.ebuild  ulogd-2.0.7.ebuild
app-build/autoconf/: Manifest  README.md  autoconf-2.71-r9.ebuild  autoconf-2.71.ebuild  autoconf-2.72.ebuild  autoconf-2.73.ebuild
app-build/autoconf-archive/: Manifest  README.md  autoconf-archive-2022.02.11.ebuild  autoconf-archive-2024.10.16.ebuild  autoconf-archive-20250714.ebuild
app-build/automake/: Manifest  README.md  automake-1.16.5.ebuild  automake-1.17.ebuild  automake-1.18.1.ebuild  automake-1.18.ebuild
app-build/bc/: Manifest
app-build/binutils/: Manifest  README.md  binutils-2.37.20211017.ebuild  binutils-2.37.20211103.ebuild  binutils-2.38.20220128.ebuild  binutils-2.38.20220223.ebuild  binutils-2.38.20220324.ebuild  binutils-2.38.20220428.ebuild  binutils-2.38.20220519.ebuild  binutils-2.38.20220601.ebuild  binutils-2.38.20220722.ebuild  binutils-2.38.20220921.ebuild  binutils-2.39.20220810.ebuild  binutils-2.39.20220926.ebuild  binutils-2.39.20230110.ebuild  binutils-2.39.20230116.ebuild  binutils-2.40.20230112.ebuild  binutils-2.40.20230411.ebuild  binutils-2.41.20230908.ebuild  binutils-2.41.20240123.ebuild  binutils-2.41.20240130.ebuild  binutils-2.41.20240222.ebuild  binutils-2.41.20240223.ebuild  binutils-2.41.20240801.ebuild  binutils-2.42.20240408.ebuild  binutils-2.43.20240804.ebuild  binutils-2.43.20241021.ebuild  binutils-2.43.20241028.ebuild  binutils-2.43.20241118.ebuild  binutils-2.43.20250104.ebuild  binutils-2.43.20250223.ebuild  binutils-2.43.20250522.ebuild  binutils-2.43.20251124.ebuild  binutils-2.43.20251125.ebuild  binutils-2.44.20250522.ebuild  binutils-2.44.20250612.ebuild  binutils-2.44.20250613.ebuild  binutils-2.44.20250615.ebuild  binutils-2.44.20250716.ebuild  binutils-2.44.20250721.ebuild  (+2 more)
app-build/bison/: Manifest  README.md  bison-3.8.2.ebuild
app-build/clang/: Manifest  clang-18.20240416.ebuild  clang-18.20240615.ebuild  clang-19.20240913.ebuild
app-build/compiler-rt/: compiler-rt-18.20240416.ebuild  compiler-rt-18.20240615.ebuild  compiler-rt-19.20240913.ebuild
app-build/flex/: Manifest  README.md  flex-20200906-r9.ebuild  flex-20201008-r9.ebuild  flex-20210813.ebuild  flex-20230906.ebuild  flex-20240408.ebuild  flex-20250114.ebuild  flex-20250517.ebuild  flex-20250526.ebuild  flex-20260222.ebuild  flex-20260224.ebuild
app-build/gcc/: Manifest  gcc-11.3.20220610.ebuild  gcc-11.3.20220701.ebuild  gcc-11.5.20240719.ebuild  gcc-11.99.20211016.ebuild  gcc-12.0.20220417.ebuild  gcc-12.0.20220424.ebuild  gcc-12.1.20220703.ebuild  gcc-12.1.20220801.ebuild  gcc-12.1.20220817.ebuild  gcc-12.1.20220830.ebuild  gcc-12.1.20220929.ebuild  gcc-12.2.20221222.ebuild  gcc-12.2.20230111.ebuild  gcc-12.2.20230127.ebuild  gcc-12.2.20230421.ebuild  gcc-12.2.20230504.ebuild  gcc-12.3.20230901.ebuild  gcc-12.3.20231028.ebuild  gcc-12.3.20231127.ebuild  gcc-12.3.20240129.ebuild  gcc-12.3.20240226.ebuild  gcc-12.3.20240318.ebuild  gcc-12.3.20240420.ebuild  gcc-12.3.20240502.ebuild  gcc-12.3.20240506.ebuild  gcc-12.3.20240610.ebuild  gcc-12.4.20241007.ebuild  gcc-12.4.20241021.ebuild  gcc-12.4.20241028.ebuild  gcc-12.4.20241119.ebuild  gcc-12.4.20250104.ebuild  gcc-12.4.20250305.ebuild  (+55 more)
app-build/gcc-lib/: Manifest  gcc-lib-13.3.20250305.ebuild  gcc-lib-13.3.20250613.ebuild  gcc-lib-13.3.20250616.ebuild  gcc-lib-14.3.20250627.ebuild  gcc-lib-14.3.20250717.ebuild  gcc-lib-14.3.20250811.ebuild  gcc-lib-14.3.20250820.ebuild  gcc-lib-14.3.20250915.ebuild  gcc-lib-14.3.20251005.ebuild  gcc-lib-14.3.20251018.ebuild  gcc-lib-14.3.20251115.ebuild  gcc-lib-14.3.20251122.ebuild  gcc-lib-14.3.20251130.ebuild  gcc-lib-15.2.20251125.ebuild  gcc-lib-15.2.20260121.ebuild  gcc-lib-15.2.20260310.ebuild  gcc-lib-15.2.20260430.ebuild  gcc-lib-15.2.20260523.ebuild  gcc-lib-15.2.20260524.ebuild  gcc-lib-15.2.20260525.ebuild  gcc-lib-15.2.20260612.ebuild  gcc-lib-15.2.20260627.ebuild  gcc-lib-15.2.20260629.ebuild  gcc-lib-15.2.20260714.ebuild
app-compression/bzip2/files/: meson.build
app-core/scrub/files/: Makefile.am  configure.ac
app-crypto/blake3/files/: b3-cat  b3sum  b3sum-msan  b3sum-tsan  b3sum.c  check_cpu_features.py  dedup_symlink  meson.build
eclass/: alternatives.eclass  autotools.eclass  base.eclass  binutils-sanitizer.eclass  cargo-crate.eclass  cargo.eclass  chromium-2.eclass  cmake-multilib.eclass  cmake-utils.eclass  cmake.eclass  crossdev.eclass  cuda.eclass  db-use.eclass  db.eclass  desktop.eclass  distutils-r1.eclass  doins.eclass  dot-a.eclass  dotnet.eclass  eapi7-ver.eclass  edo.eclass  elf-qa.eclass  emoji.eclass  epatch.eclass  epunt-cxx.eclass  estack.eclass  eutils.eclass  fcaps.eclass  fdo-mime.eclass  fixheadtails.eclass  flag-o-matic.eclass  font.eclass  freedict.eclass  git-r3.eclass  gl.eclass  gnome2-utils.eclass  gnuconfig.eclass  go-env.eclass  go-module.eclass  kernel-2.eclass  (+77 more)
lib-dev/liblinear/files/: meson.build
licenses/: Apache-2.0-with-LLVM-exceptions  CCA4  GPL-2  OpenLDAP  google-chrome  metapackage  patch-man
metadata/: layout.conf
profiles/: arch.list  categories  info_pkgs  info_vars  license_groups  profiles.desc  thirdpartymirrors  use.desc  use.desc.bak  use.local.desc
(+24739 files in other folders)
